packages/@sanity/desk-tool/src/pane/styles/Editor.css
@import 'part:@sanity/base/theme/variables-style';

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.root {
  display: block;
  background-color: var(--body-bg);
  position: relative; /* Needed to keep the spinners in place */

  @media (--screen-medium) {
    background-color: transparent;
    height: 100%;
  }
}

.hotkey {
  color: #888;
  font-size: 0.8em;
  margin-left: 0.6em;
}

.top {
  display: none;
  margin: 0 var(--medium-padding);
  color: var(--text-color-secondary);
  font-size: 0.7rem;

  @media (--screen-medium) {
    display: flex;
  }
}

.dates {
  display: block;
}

.publishedDate {
  composes: dates;
}

.editedDate {
  composes: dates;
  margin-right: 1rem;
}

.errors {
  margin-left: 1rem;
  color: var(--state-danger-color);
}

.warnings {
  margin-left: 1rem;
  color: var(--state-warning-color);
}

.editor {
  padding: var(--medium-padding);
  max-width: 40em;
}

.syncStatus {
  display: block;
  opacity: 1;
  min-width: 4rem;
  margin-right: 1em;
  font-size: var(--font-size-xsmall);
}

.syncStatusSynced {
  composes: syncStatus;
}

.syncStatusReconnecting {
  composes: syncStatus;
  color: var(--state-danger-color);
}

.syncStatusSyncing {
  composes: syncStatus;
  color: var(--state-success-color);
}

.overlay {
  position: absolute;
  background-color: rgba(255, 255, 255, 0.8);
  height: 100%;
  width: 100%;
  z-index: 200;
}

.typeMisMatchMessage {
  padding: 10em 3em;
}

.paneFunctions {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  padding-right: 0;
  font-size: var(--font-size-small);
}

.publishButton {
  font-size: 0.8em;

  @media (--screen-medium) {
    font-size: 1em;
    padding: 0 1rem;
  }
}

.syncSpinnerContainer {
  display: inline-block;
  height: 1em;
  position: relative;
  margin-right: 1em;
}

.syncSpinner {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 1em;
  height: 1em;
  transform-origin: center center;
  animation-name: spin;
  animation-duration: 2s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;

  @nest & > svg {
    display: block;
  }
}

.spinnerContainer {
  composes: frosted from "part:@sanity/base/theme/layout/backgrounds-style";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 3;
  height: 100vh;

  @media (--screen-medium) {
    height: calc(100vh - 6rem); /* 6rem is aprox the height of the header stuff */
  }
}

.validationButton {
  border: 5px solid red;
}

